--- a/public/css/dashboard/CreateProduct.css
+++ b/public/css/dashboard/CreateProduct.css
@@ -3,18 +3,24 @@
 .create-product{
     height:100vh;
     padding: 60px;
-    background-color: lightblue;
+    /* background-color: lightblue; */
 }
 
-.product-data{
+.create-product h2{
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.product-data form{
     background-color: white;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius:15px;
+    border:1px solid lightgrey;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     width: 70%;
-    height: 80%;
+    /* height: 80%; */
+    height: 100vh;
     padding :25px;
 }
 .age-color-material-size{
@@ -35,4 +41,93 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+}
+
+.price-quantity{
+    display: flex;
+    justify-content:space-between;
+}
+.price,.category,.quantity{
+    width: 33%;
+    gap: 20px ;
+}
+.product-images label{
+margin-bottom:20px;
+}
+.product-images{
+    height:40%;
+    padding:15px;
+    width: 100%;
+    gap: 15px;
+    align-items:center;
+    /* text-align: center; */
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius:15px;
+}
+.product-images-content{
+    display: flex;
+    width: 100%;
+    gap: 15px;
+    text-align: center;
+}
+.main-product-image{
+    background-color: #f4f6f8;
+    width: 40%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-radius:15px;
+    overflow : hidden;
+    /* height: 100%; */
+    border:2.5px dashed lightgrey;
+}
+.main-product-image.active{
+    border:2.5px solid lightgrey;
+    padding: 0px !important;
+}
+.main-product-image img{
+    max-height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    overflow : hidden;
+    
+}
+.second-image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.second-product-images{
+    width: 60%;
+    /* background-color:red; */
+    display:grid;
+    /* padding:5px; */
+    grid-template-columns: auto auto;
+    align-items:center;
+    /* justify-content:center; */
+}
+.second-image{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width:90%;
+    height:95%;
+    padding: 5px 20px;
+    background-color:#f4f6f8;
+    border-radius:15px;
+    border:2px dashed lightgrey;
+}
+
+.Browse-File{
+    border-radius: 5px;
+    background-color:black;
+    color: white;
+    border: none;
+    font-weight: 500;
+    width: 50%;
+    /* padding:5px 0px; */
+    margin: 0 auto;
 }
