--- a/public/css/ProductPage.css
+++ b/public/css/ProductPage.css
@@ -154,3 +154,107 @@
     border: black solid 1px;
     color:black;
 }
+
+.guaranties{
+    display:flex;
+    justify-content: space-around;
+    padding: 60px;
+    flex-wrap: wrap;
+}
+
+.guaranties div{
+    width: 17%;
+    text-align: center;
+}
+
+.benefits{
+    height: 50vh;
+    padding:30px 50px;
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.benefits h1{
+    margin:20px auto;
+}
+.benefits-blocs{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+    .product{
+        /* background-color: red; */
+        /* height:650px; */
+        width: 75%;
+        margin:50px auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        overflow: hidden;
+        row-gap: 50px;
+    }
+/*******col-1********/
+.column-1 {
+    width:100%;
+}
+.images{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.main-image img{
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+.sec-images img{
+    width: 95px;
+}
+
+    .guaranties{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 60px;
+        flex-wrap: wrap;
+    }
+/*******col-2********/
+.column-2 {
+    width:90%; 
+    background-color:red;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items:left;
+}
+
+
+.guaranties div{
+    width: 70%;
+    text-align: center;
+}
+
+.benefits{
+    height: 100%;
+    /* padding:30px 50px; */
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.benefits h1{
+    margin:20px auto;
+    font-size: 17px;
+    font-weight: 500;
+}
+.benefits-blocs{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+}
