--- a/public/css/ProductPage.css
+++ b/public/css/ProductPage.css
@@ -1,9 +1,10 @@
 .product{
-    /* background-color: red; */
+    /* background-color: yellow; */
     height:650px;
     width: 75%;
     margin:50px auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     overflow: hidden;
     row-gap: 50px;
@@ -11,23 +12,34 @@
 
 /*******col-1********/
 .column-1 {
-    width:50%;
+    width:60%;
+    /* background-color:red; */
 }
 .images{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .main-image img{
     width: 650px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
+.sec-images{
+    padding: 20px;
+    /* background-color:blue; */
+}
 .sec-images img{
-    width: 95px;
+    margin: 10px auto;
+
+    width: 150px;
 }
 
+.hideImage{
+    display: none;
+}
 
 /*******col-2********/
 .column-2 {
+    /* background-color:green; */
     width:40%; 
     color: black;
     display: flex;
@@ -83,6 +95,9 @@
     border-radius:5px;
     border: black solid 1px;
     cursor: pointer;
+}
+.Size select{
+    width:80%;
 }
 .Size button:hover{
     background-color: black;
@@ -196,6 +211,79 @@
         justify-content: space-between;
         overflow: hidden;
         row-gap: 50px;
+    }
+/*******col-1********/
+.column-1 {
+    width:100%;
+}
+.images{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.main-image img{
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+.sec-images img{
+    width: 95px;
+}
+
+    .guaranties{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 60px;
+        flex-wrap: wrap;
+    }
+/*******col-2********/
+.column-2 {
+    width:90%; 
+    background-color:red;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items:left;
+}
+
+
+.guaranties div{
+    width: 70%;
+    text-align: center;
+}
+
+.benefits{
+    height: 100%;
+    /* padding:30px 50px; */
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.benefits h1{
+    margin:20px auto;
+    font-size: 17px;
+    font-weight: 500;
+}
+.benefits-blocs{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+}
+
+@media only screen and (max-width: 770px) {
+    .product{
+        width: 75%;
+        height: 100vh;
+        margin:50px auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        /* overflow: hidden; */
+        /* row-gap: 50px; */
     }
 /*******col-1********/
 .column-1 {
