--- a/public/css/ShoppingCart.css
+++ b/public/css/ShoppingCart.css
@@ -91,11 +91,10 @@
   }
   
   .products-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid black;
   }
   
-  .products-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
+  tbody tr:hover{
+    background-color:#fafafa;
   }
   
